--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+build/bin
+node_modules
+# frontend/dist
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -13,3 +17,5 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+.vscode
