修复 app 不能启动的 bug

--- a/src/main/resources/application-release.properties
+++ b/src/main/resources/application-release.properties
@@ -2,23 +2,5 @@
 #    port=2333
 
 [web]
-    devtools.enable=false
-    error-page.resource = res:///static/index.html
-
-[datasource "default"]
-    username=wpm
-    password=wpm
-    database=wpm
-    driver=sqlxxx
-    port=0
-    host=localhost
-    lazyload=true
-
-[datasource "wpm"]
-    username=wpm
-    password=wpm
-    database=wpm
-    driver=sqlite
-    port=0
-    host=localhost
-    
+#    devtools.enable=false
+#    error-page.resource = res:///static/index.html
