更新了应用程序元信息

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 [application]
-#    profiles.active=release
-    profiles.active=debug
+   profiles.active=release
+    # profiles.active=debug
 
 [server]
     port=20721
