配置 application-release.properties 使用 sqlite 作为数据库

--- a/src/main/resources/application-release.properties
+++ b/src/main/resources/application-release.properties
@@ -20,7 +20,7 @@
     name=wpm
     host=localhost
     port=0
-    driver=sqlserver
+    driver=sqlite
     username=wpm
     password=wpm
     database=wpm
