--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 [datasource "wpm"]
-    database=wpm-{{version}}-{{hex}}-debug.db
+    database=wpm-{{version}}-{{hex}}-dev.db
     driver=sqlite
 
 [server]
@@ -10,6 +10,6 @@
     debug=1
     dump=0
     log-options=1
-    log-properties=1
+    log-properties=0
     run-with-gui=0
     run-with-server=1
