--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,1 @@
-[application]
-#    profiles.active=release
-    profiles.active=debug
-
-[server]
-    port=20721
-
-[web]
-    devtools.enable=false
-    error-page.resource = res:///static/index.html
-    rest.context-path = /api/v1
-
-[datasource "default"]
-    username=wpm
-    password=wpm
-    database=wpm
-    driver=sqlxxx
-    port=0
-    host=localhost
-    lazyload=true
-
-[datasource "wpm"]
-    username=wpm
-    password=wpm
-    database=wpm
-    driver=sqlite
-    port=0
-    host=localhost
+application.profiles.active=release
